Translate: Correct alignment and contrast for the "Create Glossary" link.
Props Otshelnik-Fm.
See #6080.

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@11525 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
+++ b/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
@@ -312,6 +312,11 @@ body.wporg-make #headline h2 a:before {
 	margin-left: 6px;
 }
 
+.gp-content h2 a.glossary-link {
+	margin-top: .25em;
+	color: #006799;
+}
+
 .gp-content h3 {
 	background: none;
 	padding: 0;
